High-contrast accessibility fixes

--- a/tbx/static_src/sass/components/_button-link.scss
+++ b/tbx/static_src/sass/components/_button-link.scss
@@ -11,6 +11,8 @@
     transition: background-color $transition-quick;
     // TODO: add default bg color for themed pages var(--color--accent) once color themes BE is ready
 
+    @include high-contrast-text-decoration();
+
     @include reduced-motion() {
         transition: none;
     }
