--- a/tbx/static_src/sass/config/_mixins.scss
+++ b/tbx/static_src/sass/config/_mixins.scss
@@ -385,6 +385,10 @@
         @include focus-style();
     }
 
+    @include high-contrast-text-decoration();
+}
+
+@mixin high-contrast-text-decoration() {
     @include high-contrast-mode() {
         text-decoration: underline;
         text-decoration-thickness: $link-underline-thickness;
